fix for search position when logo is not centered

--- a/themes/jeo-theme/assets/scss/3-layout/_l-header.scss
+++ b/themes/jeo-theme/assets/scss/3-layout/_l-header.scss
@@ -195,6 +195,10 @@ header.site-header {
     .top-header-contain {
         background-color: var(--primary);
         
+        #social-nav-contain {
+            margin-right: auto;
+            margin-left: 0px;
+        }
         .site-description {
             color: var(--description-color)
         }
